Mon Mar  1 12:31:38 2004  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/orbsvcs/PortableGroup/PG_Properties_Encoder.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_Properties_Encoder.cpp:
          ACE_Pair cannot contain CORBA::Any due to missing operator
          != on Any (and fool compilers that expand unused template
          methods (LynxOs; gcc version 2.9-gnupro-98r2))
          Hand-code a simple pair to replace ACE_Pair in this case.

Sun Feb 29 22:10:00 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Environment.i (release ()):

	  Removed an unneeded check for null pointer. Thanks to Gabriele
	  Trombetti<gabtromb@isis.vanderbilt.edu> for pointing this out. 

Sun Feb 29 20:00:02 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/ObjectKey_Table.cpp:

	  The TAO::ObjectKey_Table uses ACE_RB_Tree as the container of
	  the object  keys for TAO. RB_Tree uses ordering functor
	  TAO::Less_Than_ObjectKey. However, the functor was not strictly 
	  ordered. Thanks to Milan Cvetkovic <milan.cvetkovic@mpathix.com>
	  for finding this problem. The bad ordering lead to some of the
	  object keys being left in the tree which caused huge growth in
	  runtime memory.

Sun Feb 29 17:43:09 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* performance-tests/Latency/Thread_Per_Connection/Roundtrip.cpp:

	  Do not use a boolean value of true while callin shutdown ().

Sun Feb 29 17:07:34 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* orbsvcs/tests/Miop/McastHello/Makefile:
	* orbsvcs/tests/Security/Big_Request/Makefile:
	* orbsvcs/tests/ior_corbaname/Makefile:

	  These makefiles needed some special attention.

Sun Feb 29 16:46:53 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Makefile*:
	* examples/Makefile*:
	* utils/Makefile*:
	* docs/tutorials/Makefile*: 

          Regenerated dependencies.

Sun Feb 29 14:58:50 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
