@@ -1,3 +1,10 @@
+Mon Mar  1 16:52:15 2004  Yamuna Krishnamurthy  <yamuna@oomworks.com>
+
+	* orbsvcs/tests/AVStreams/Simple_Two_Stage/Receiver_Stats.h: 
+	* orbsvcs/tests/AVStreams/Simple_Two_Stage/Receiver_Stats.cpp: 	
+
+	  Include the inline file.
+
 Mon Mar  1 12:31:38 2004  Dale Wilson  <wilson_d@ociweb.com>
 
         * orbsvcs/orbsvcs/PortableGroup/PG_Properties_Encoder.h:
